Fixing some errors, WAVE11, fixing contrast

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,7 +18,7 @@
   --surface-2:#f1f5f9;
   --border:#e2e8f0;
 
-  --text:#103daf;
+  --text:#3764d4da;
   --muted:#475569;
 
   --shadow:0 12px 28px rgba(2,6,23,.08);
